--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Roos Verwijs"
-  avatar           : "/img/roos_id.png"
+  avatar           : "/img/roos_id.jpg"
   bio              : " "
   location         : "Boston, MA"
   links:
