--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,6 @@ main:
 # - title: "Code"
 #   url: /code/
  - title: "Publications"
-   url: /publications/
+   url: /publications_roos/
  - title: "About"
-   url: /about/
+   url: /about_roos/
